samples/_failures_safe/1761631956_b2f821_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7269075.c: In function ‘main’:
./samples/SAFE/__tmp_d7269075.c:187:9: error: expected expression at end of input
  187 |         input[len -
      |         ^~~~~
./samples/SAFE/__tmp_d7269075.c:187:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7269075.c:187:9: error: expected declaration or statement at end of input
